# petpack

./: .dockerignore  .gitignore  404.html  CROSS_PLATFORM.html  DOCKER.html  Dockerfile  LICENSE  PET_FORMATS.html  README.en.md  README.html  README.md  THIRD_PARTY_NOTICES.md  development.html  docker-compose.yml  getting-started.html  hashmap.json  index.html  package-lock.json  package.json  site-maintenance.html  troubleshooting.html  user-guide.html
assets/: CROSS_PLATFORM.md.BXFcF3r3.js  CROSS_PLATFORM.md.BXFcF3r3.lean.js  DOCKER.md.CgKxVE-v.js  DOCKER.md.CgKxVE-v.lean.js  PET_FORMATS.md.SVVPD_AI.js  PET_FORMATS.md.SVVPD_AI.lean.js  README.md.g2g6CBDV.js  README.md.g2g6CBDV.lean.js  app.CatYXOQB.js  development.md.Ohnbili5.js  development.md.Ohnbili5.lean.js  getting-started.md.YpxJxSzM.js  getting-started.md.YpxJxSzM.lean.js  index.md.CjaGgoR_.js  index.md.CjaGgoR_.lean.js  site-maintenance.md.C_Myb9Xs.js  site-maintenance.md.C_Myb9Xs.lean.js  style._bN4hl8N.css  troubleshooting.md.DvhX_VuU.js  troubleshooting.md.DvhX_VuU.lean.js  user-guide.md.AE1h56bN.js  user-guide.md.AE1h56bN.lean.js
docs/: CROSS_PLATFORM.md  DOCKER.md  PET_FORMATS.md  README.md  TEST_REPORT.md  development.md  getting-started.md  index.md  site-maintenance.md  troubleshooting.md  user-guide.md
server/: Dockerfile  app.mjs  app.test.mjs  package-lock.json  package.json
src/: main.ts  runtime.ts  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: pack_pet.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  pet_package.rs
(+17 files in other folders)
